==> elua/elua/src/platform/lpc24xx/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include "stacks.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "utils.h"
#include "common.h"
#include "elua_adc.h"
#include "platform_conf.h"
#include "buf.h"
#include "elua_int.h"
#include "arm_constants.h"
#include "LPC23xx.h"                        /* LPC23xx/24xx definitions */
#include "target.h"
#include "irq.h"
#include "uart.h"

int platform_init()
{
  // Complete CPU initialization
  platform_setup_cpu();

  // External memory
  platform_setup_extmem();   

  // Setup peripherals
  platform_setup_timers();
  platform_setup_pwm();
  
#ifdef BUILD_ADC
  // Setup ADCs
  platform_setup_adcs();
#endif

  // Common platform initialization code
  cmn_platform_init();

  return PLATFORM_OK;
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  pio_type retval = 1;
  PREG FIOxDIR = ( PREG )pio_fiodir[ port ];
  PREG FIOxPIN = ( PREG )pio_fiopin[ port ];
  PREG FIOxSET = ( PREG )pio_fioset[ port ];
  PREG FIOxCLR = ( PREG )pio_fioclr[ port ];
  PREG PINxMODE0 = ( PREG )pio_pinmode[ port * 2 ];
  PREG PINxMODE1 = ( PREG )pio_pinmode[ port * 2 + 1 ];
  u32 mask;
   
  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:   
      *FIOxPIN = pinmask;
      break;
      
    case PLATFORM_IO_PIN_SET:
      *FIOxSET = pinmask;
      break;
      
    case PLATFORM_IO_PIN_CLEAR:
      *FIOxCLR = pinmask;
      break;
      
    case PLATFORM_IO_PORT_DIR_OUTPUT:
      *FIOxDIR = 0xFFFFFFFF;
      break;    

    case PLATFORM_IO_PIN_DIR_OUTPUT:
      *FIOxDIR |= pinmask;
      break;
      
    case PLATFORM_IO_PORT_DIR_INPUT:
      *FIOxDIR = 0;
      break;

    case PLATFORM_IO_PIN_DIR_INPUT:
      *FIOxDIR &= ~pinmask;
      break;    
            
    case PLATFORM_IO_PORT_GET_VALUE:
      retval = *FIOxPIN;
      break;
      
    case PLATFORM_IO_PIN_GET:
      retval =( *FIOxPIN & pinmask ) ? 1 : 0;
      break;

    case PLATFORM_IO_PIN_PULLUP:
      if( port == 0 && ( pinmask & 0xF8000000 ) )
        printf( "Unable to set pullups on specified pin(s).\n" );
      else
      {
        for( mask = 1; mask < 16; mask ++ )
          if( pinmask & ( 1 << mask ) )
            *PINxMODE0 = *PINxMODE0 & ~( 3 << ( mask * 2 ) );
        for( mask = 16; mask < 32; mask ++ ) 
          if( pinmask & ( 1 << mask ) )
            *PINxMODE1 = *PINxMODE1 & ~( 3 << ( mask * 2 ) );
      }
      break;

    case PLATFORM_IO_PIN_PULLDOWN:
      if( port == 0 && ( pinmask & 0xF8000000 ) )
        printf( "Unable to set pulldowns on specified pin(s).\n" );
      else
      {
         for( mask = 1; mask < 16; mask ++ )
          if( pinmask & ( 1 << mask ) )
            *PINxMODE0 = ( *PINxMODE0 & ~( 3 << ( mask * 2 ) ) ) | ( 3 << ( mask * 2 ) );
        for( mask = 16; mask < 32; mask ++ ) 
          if( pinmask & ( 1 << mask ) )
            *PINxMODE1 = ( *PINxMODE1 & ~( 3 << ( mask * 2 ) ) ) | ( 3 << ( mask * 2 ) );
      }
      break;

    case PLATFORM_IO_PIN_NOPULL:
      if( port == 0 && ( pinmask & 0xF8000000 ) )
        printf( "Unable to reset pullups/pulldowns on specified pin(s).\n" );
      else
      {
        for( mask = 1; mask < 16; mask ++ )
          if( pinmask & ( 1 << mask ) )
            *PINxMODE0 = ( *PINxMODE0 & ~( 3 << ( mask * 2 ) ) ) | ( 2 << ( mask * 2 ) );
        for( mask = 16; mask < 32; mask ++ ) 
          if( pinmask & ( 1 << mask ) )
            *PINxMODE1 = ( *PINxMODE1 & ~( 3 << ( mask * 2 ) ) ) | ( 2 << ( mask * 2 ) );
      }
      break;
      
    default:
      retval = 0;
      break;
  }
  return retval;
}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
  u32 temp, uclk, mul_frac_div, div_add_frac_div;
  u32 diviser = 0;
  u32 mul_frac_div_opt = 0;
  u32 div_add_opt = 0;
  u32 div_opt = 0;
  u32 calc_baud = 0;
  u32 rel_err = 0;
  u32 rel_err_opt = 100000;

  PREG UxLCR = ( PREG )uart_lcr[ id ];
  PREG UxDLM = ( PREG )uart_dlm[ id ];
  PREG UxDLL = ( PREG )uart_dll[ id ];
  PREG UxFCR = ( PREG )uart_fcr[ id ];
  PREG UxFDR = ( PREG )uart_fdr[ id ];

  // Set data bits, parity, stop bit
  temp = 0;
  switch( databits )
  {
    case 5:
      temp |= UART_DATABITS_5;
      break;

    case 6:
      temp |= UART_DATABITS_6;
      break;

    case 7:
      temp |= UART_DATABITS_7;
      break;

    case 8:
      temp |= UART_DATABITS_8;
      break;
  }
  if( stopbits == PLATFORM_UART_STOPBITS_2 )
    temp |= UART_STOPBITS_2;
  else
    temp |= UART_STOPBITS_1;
  if( parity != PLATFORM_UART_PARITY_NONE )
  {
    temp |= UART_PARITY_ENABLE;
    if( parity == PLATFORM_UART_PARITY_ODD )
      temp |= UART_PARITY_ODD;
    else
      temp |= UART_PARITY_EVEN;
  }
  *UxLCR = temp;

  // Divisor computation
  //temp = ( Fpclk_UART >> 4 ) / baud;
  uclk = Fpclk_UART >> 4;

  for( mul_frac_div = 1; mul_frac_div <= 15; mul_frac_div++ )
  {
    for( div_add_frac_div = 1; div_add_frac_div <= 15; div_add_frac_div++ )
    {
      temp = ( mul_frac_div * uclk ) / ( ( mul_frac_div + div_add_frac_div ) );

      diviser = temp / baud;

      if ( ( temp % baud ) > ( baud / 2 ) )
        diviser++;

      if ( diviser > 2 && diviser < 65536 )
      {
        calc_baud = temp / diviser;
       
        if (calc_baud <= baud)
          rel_err = baud - calc_baud;

        if ((rel_err < rel_err_opt))
        {
          mul_frac_div_opt = mul_frac_div ;
          div_add_opt = div_add_frac_div;
          div_opt = diviser;
          rel_err_opt = rel_err;
          if (rel_err == 0)
            break;
        }
      }
    }
  }
  // Set baud and divisors
  *UxLCR |= UART_DLAB_ENABLE;
  *UxDLM = div_opt >> 8;
  *UxDLL = div_opt & 0xFF;
  *UxLCR &= ~UART_DLAB_ENABLE;
  *UxFDR = ( ( mul_frac_div_opt << 4 ) & 0xF0 ) | ( div_add_opt & 0x0F );

  // Enable and reset Tx and Rx FIFOs
  *UxFCR = UART_FIFO_ENABLE | UART_RXFIFO_RESET | UART_TXFIFO_RESET;

  // Setup PIOs for UART0. For the other ports, the user needs to specify what pin(s)
  // are allocated for UART Rx/Tx.
  if( id == 0 )
    PINSEL0 = ( PINSEL0 & 0xFFFFFF0F ) | 0x00000050;

  // Return the actual baud
  return ( Fpclk_UART >> 4 ) / temp;
}

void platform_s_uart_send( unsigned id, u8 data )
{
  PREG UxTHR = ( PREG )uart_thr[ id ];
  PREG UxLSR = ( PREG )uart_lsr[ id ];
  
  while( ( *UxLSR & LSR_THRE ) == 0 );
  *UxTHR = data;
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
  PREG UxLSR = ( PREG )uart_lsr[ id ];
  PREG UxRBR = ( PREG )uart_rbr[ id ];

  if( timeout == 0 )
  {
    // Return data only if already available
    if( *UxLSR & LSR_RDR )
      return *UxRBR;
    else
      return -1;
  }
  else
    while( ( *UxLSR & LSR_RDR ) == 0 );
  return *UxRBR;
}

static u32 platform_timer_get_clock( unsigned id )
{
  PREG TxPR = ( PREG )tmr_pr[ id ];

  return Fpclk / ( *TxPR + 1 );
}

static u32 platform_timer_set_clock( unsigned id, u32 clock )
{
  u32 div = Fpclk / clock, prevtc;
  PREG TxPR = ( PREG )tmr_pr[ id ];  
  PREG TxPC = ( PREG )tmr_pc[ id ];
  PREG TxTCR = ( PREG )tmr_tcr[ id ]; 
  
  prevtc = *TxTCR;
  *TxTCR = 0;
  *TxPC = 0; 
  *TxPR = div - 1;
  *TxTCR = prevtc;
  return Fpclk / div;
}

void platform_s_timer_delay( unsigned id, timer_data_type delay_us )
{
  PREG TxTCR = ( PREG )tmr_tcr[ id ];
  PREG TxTC = ( PREG )tmr_tc[ id ];
  u32 last;

  last = ( ( u64 )delay_us * platform_timer_get_clock( id ) ) / 1000000;
  *TxTCR = TMR_ENABLE | TMR_RESET;
  *TxTCR = TMR_ENABLE;
  while( *TxTC < last );
}

timer_data_type platform_s_timer_op( unsigned id, int op, timer_data_type data )
{
  u32 res = 0;
  PREG TxTCR = ( PREG )tmr_tcr[ id ];
  PREG TxTC = ( PREG )tmr_tc[ id ];

  switch( op )
  {
    case PLATFORM_TIMER_OP_START:
      *TxTCR = TMR_ENABLE | TMR_RESET;
      *TxTCR = TMR_ENABLE;
      break;
      
    case PLATFORM_TIMER_OP_READ:
      res = *TxTC;
      break;

    case PLATFORM_TIMER_OP_SET_CLOCK:
      res = platform_timer_set_clock( id, data );
      break;
      
    case PLATFORM_TIMER_OP_GET_CLOCK:
      res = platform_timer_get_clock( id );
      break;

    case PLATFORM_TIMER_OP_GET_MAX_CNT:
      res = 0xFFFFFFFF;
      break;
  }
  return res;
}

int platform_adc_update_sequence( )
{ 
  elua_adc_dev_state *d = adc_get_dev_state( 0 ); 
  u8 seq_tmp;
  unsigned id;
  u32 pinnum, pinreg_idx;

  for( seq_tmp = 0; seq_tmp < d->seq_len; seq_tmp++ )
  {
    id = d->ch_state[ seq_tmp ]->id;
    pinnum = adc_pins[ id ];
    pinreg_idx = 2 * adc_ports[ id ];

    if ( pinnum >= 16 )
    {
        pinnum -= 16;
        pinreg_idx++;
    }
    
    *( PREG )pinsel_reg[ pinreg_idx ] &= ~( 0x03UL << pinnum * 2 );
    *( PREG )pinsel_reg[ pinreg_idx ] |= ( ( u32 )adc_funcs[ id ] << pinnum * 2 );
  }
  
  return PLATFORM_OK;
}

u32 platform_pwm_set_clock( unsigned id, u32 clock )
{
  u32 div = Fpclk / clock, prevtc;
  unsigned pwmid = id / 6;
  PREG PWMxPR = ( PREG )pwm_pr[ pwmid ];  
  PREG PWMxPC = ( PREG )pwm_pc[ pwmid ];
  PREG PWMxTCR = ( PREG )pwm_tcr[ pwmid ]; 
  
  prevtc = *PWMxTCR;
  *PWMxTCR = 0;
  *PWMxPC = 0; 
  *PWMxPR = div - 1;
  *PWMxTCR = prevtc;
  return Fpclk / div;
}

u32 platform_pwm_setup( unsigned id, u32 frequency, unsigned duty )
{
  unsigned pwmid = id / 6, chid = id % 6;
  PREG PWMxMR0 = pwmid == 0 ? ( PREG )&PWM0MR0 : ( PREG )&PWM1MR0;
  PREG PWMxMRc = ( PREG )pwm_channels[ pwmid ][ chid ];
  PREG PWMxLER = ( PREG )pwm_ler[ pwmid ];
  u32 divisor;

  divisor = platform_pwm_get_clock( id ) / frequency - 1;
  *PWMxMR0 = divisor;
  *PWMxMRc = ( divisor * duty ) / 100;
  *PWMxLER = 1 | ( 1 << ( chid + 1 ) );

  return platform_pwm_get_clock( id ) / divisor;
}
